# seds536-term-project

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/architecture/: state-management-decisions.md  system-design.md
docs/design/: app-vision.md  design-tools-research.md  stitch-notes.md
docs/presentation/: cheat_sheet.md  slides.md
docs/project-management/: requirements.md  timeline.md
docs/report/: SEDS536_Project_Report.tex  literature.bib
docs/research/: datasets.md  literature-review.md  models.md  skin-tone-scales.md  training-experiments.md
research-papers/: README.md
training/: __init__.py  results.json  results_3class.json  results_ita_baseline.json  results_ita_preprocessed.json  results_ita_preprocessed_5class.json
training/configs/: config.yaml  config_3class_faces.yaml  config_3class_mediapipe.yaml  config_3class_mediapipe_test.yaml  config_5class_faces.yaml  config_5class_mediapipe_raw.yaml  config_test.yaml
training/scripts/: check_env.py  check_image_sizes.py  compare_face_detectors.py  convert_to_tflite.py  dataset.py  evaluate.py  infer.py  ita_baseline.py  model.py  preprocess_ccv2.py  preprocess_faces.py  preprocess_mediapipe.py  preprocess_mediapipe_raw.py  preprocess_skin.py  skin_segmentation.py  test_face_detection.py  test_skin_segmentation.py  train.py
(+29 files in other folders)
